@@ -1,3 +1,8 @@
+2014-02-09  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* message.el (message-tab): Mention what happens on normal tabs
+	(bug#11297).
+
 2014-02-08  Glenn Morris  <rgm@gnu.org>
 
 	* auth-source.el (auth-sources): Doc fix.  (Bug#16642)
